recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:3: error: type mismatch;
 found   : Int
 required: List[Int]
	if(l == Nil)  l.head+1
                            ^