recursion.cons.lessons.recursion.cons.PlusOne.scala.code
def plusOne(l:List[Int]): List[Int] = {
	
	if(l == Nil)  l.head+1
	else return l.head+1::plusOne(l.tail)
}
